--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
         <div class="navigation">
             <a href="/projects">Projects</a>
-            <a href="https://news.untold.garden/">News</a>
+            <a href="/news">News</a>
             <a href="/about-us">About Us</a>
         </div>
     </div>
