--- a/404.html
+++ b/404.html
@@ -97,7 +97,7 @@
         </div>
         <div class="navigation">
             <a href="/projects">Projects</a>
-            <a href="/news">News</a>
+            <a href="news.untold.garden">News</a>
             <a href="/about-us">About Us</a>
         </div>
     </div>
