added mobile video

--- a/about-us.html
+++ b/about-us.html
@@ -12,6 +12,17 @@
   html {
     background-color: #fafafa;
   }
+
+  @media (max-width: 600px) {
+    .row {
+      display: flex;
+      flex-direction: column;
+    }
+    
+    .row .column {
+      width: 100%;
+    }
+  }
 </style>
 
 <body>
@@ -37,6 +48,7 @@
         worlds, and the near-endless esthetic capabilities of brain-replicating machines, rendering any solidity of
         aesthetics useless. Untold, as well as in not narrated or told by us, as our projects speak through those who
         experience them, each artwork unique to everyone who partakes in it.</div>
+        <br>
       <div class="column"><b><i>Garden</i></b>, as in the continuously evolving dance of mutual dependency between
         humans and natures - in the plural. Natures that are today both physical and virtual, through the numerous
         entities facilitating, mediating and obfuscating the human existence online, new digital ecosystems teeming with
