--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Background Video</title>
+    <title>Home - Untold Garden</title>
     <style>
         #background-container {
             position: fixed;
@@ -109,9 +109,9 @@
             Untold Garden
         </div>
         <div class="navigation">
-            <a href="/projects">Projects</a>
+            <a href="/website/projects">Projects</a>
             <a href="https://news.untold.garden">News</a>
-            <a href="/about-us">About Us</a>
+            <a href="/website/about-us">About Us</a>
         </div>
     </div>
 </body>
