--- a/projects/index.html
+++ b/projects/index.html
@@ -127,11 +127,11 @@
                     <div class="project-title">Garden of Ghost Flowers</div>
                     <div class="project-description">Performance, VR</div>
                 </a>
-                <a href="/apparatus-ludens" class="project-item" data-image="apparatus-ludens">
+                <a href="/website/apparatus-ludens" class="project-item" data-image="apparatus-ludens">
                     <div class="project-title">Apparatus Ludens</div>
                     <div class="project-description">Film, AI, Screen/Projection</div>
                 </a>
-                <a href="/unknown-cloud" class="project-item" data-image="unknown-cloud">
+                <a href="/website/unknown-cloud" class="project-item" data-image="unknown-cloud">
                     <div class="project-title">Unknown Cloud</div>
                     <div class="project-description">Geospatial AR</div>
                 </a>
@@ -147,7 +147,7 @@
                     <div class="project-title">Skiljelinjer</div>
                     <div class="project-description">AR tool for collaborative design and decision-making</div>
                 </a>
-                <a href="/art-sensation-cube" class="project-item" data-image="art-sensation-cube">
+                <a href="/website/art-sensation-cube" class="project-item" data-image="art-sensation-cube">
                     <div class="project-title">Art/Sensation Cube</div>
                     <div class="project-description">Web gallery</div>
                 </a>
