--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
             Untold Garden
         </div>
         <div class="navigation">
-            <a href="/website/projects">Projects</a>
+            <a href="/website/projects/">Projects</a>
             <a href="https://news.untold.garden">News</a>
-            <a href="/website/about-us">About Us</a>
+            <a href="/website/about-us/">About Us</a>
         </div>
     </div>
 </body>
