--- a/about-us.html
+++ b/about-us.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="assets/main.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/main.css">
 
 <head>
   <meta charset="UTF-8">
@@ -105,7 +105,7 @@
 
   <script>
     // Fetch the SVG icons and include them in the page
-    fetch('../assets/icons.html').then(response => response.text()).then(data => {
+    fetch('..{{ site.baseurl }}/assets/icons.html').then(response => response.text()).then(data => {
       document.getElementById('icons-container').innerHTML = data;
     });
 
