deploy: 128a011fca82df2de6884e7cf682deb9a6096018

--- a/apparatus-ludens/index.html
+++ b/apparatus-ludens/index.html
@@ -29,7 +29,7 @@
     <meta name="twitter:image" content="/assets/images/apparatus-ludens.webp"/>
     
     
-    <link rel="stylesheet" href="/assets/main.css">
+    <link rel="stylesheet" href="/website/assets/main.css">
     <style>
         .video-wrapper {
             position: relative;
@@ -123,7 +123,7 @@ Do you have a favourite song?</p>
 
     <script src="https://player.vimeo.com/api/player.js"></script>
     <script>
-        fetch('/assets/icons.html')
+        fetch('/website/assets/icons.html')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('icons-container').innerHTML = data;
