--- a/reach/index.html
+++ b/reach/index.html
@@ -29,7 +29,7 @@
     <meta name="twitter:image" content="/images/social/reach-social.webp"/>
     
     
-    <link rel="stylesheet" href="/assets/main.css">
+    <link rel="stylesheet" href="/website/assets/main.css">
     <style>
         .video-wrapper {
             position: relative;
@@ -122,7 +122,7 @@ In Reach, your touch is expanded into a virtual tactile language, a somatic poet
 
     <script src="https://player.vimeo.com/api/player.js"></script>
     <script>
-        fetch('/assets/icons.html')
+        fetch('/website/assets/icons.html')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('icons-container').innerHTML = data;
