--- a/projects/index.html
+++ b/projects/index.html
@@ -115,11 +115,11 @@
         <div class="projects-list">
             <div class="project-category">
                 <h2>Art</h2>
-                <a href="/reach" class="project-item" data-image="reach">
+                <a href="/website/reach" class="project-item" data-image="reach">
                     <div class="project-title">Reach</div>
                     <div class="project-description">Bronze, electronics, AR</div>
                 </a>
-                <a href="/interspatial-echoes" class="project-item" data-image="interspatial-echoes">
+                <a href="/website/interspatial-echoes" class="project-item" data-image="interspatial-echoes">
                     <div class="project-title">Interspatial Echoes</div>
                     <div class="project-description">Geospatial AR</div>
                 </a>
