deploy: ee83cb28fc584c57841c1aebf658ecbf487c3887

--- a/art-sensation-cube/index.html
+++ b/art-sensation-cube/index.html
@@ -29,7 +29,7 @@
     <meta name="twitter:image" content="/assets/images/art-sensation-cube-linnea-hansander2.webp"/>
     
     
-    <link rel="stylesheet" href="/website/assets/main.css">
+    <link rel="stylesheet" href="/assets/main.css">
     <style>
         .video-wrapper {
             position: relative;
@@ -84,7 +84,7 @@ for Museet før Samtidskunst, Roskilde</p>
 
     <script src="https://player.vimeo.com/api/player.js"></script>
     <script>
-        fetch('/website/assets/icons.html')
+        fetch('/assets/icons.html')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('icons-container').innerHTML = data;
