--- a/garden-of-ghost-flowers/index.html
+++ b/garden-of-ghost-flowers/index.html
@@ -29,7 +29,7 @@
     <meta name="twitter:image" content="/images/social/garden-of-ghost-flowers.webp"/>
     
     
-    <link rel="stylesheet" href="/website/assets/main.css">
+    <link rel="stylesheet" href="/assets/main.css">
     <style>
         .video-wrapper {
             position: relative;
@@ -64,7 +64,7 @@
 
     <script src="https://player.vimeo.com/api/player.js"></script>
     <script>
-        fetch('/website/assets/icons.html')
+        fetch('/assets/icons.html')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('icons-container').innerHTML = data;
