--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             width: 100%;
             height: 100%;
             z-index: -100;
-            background: url('/website/assets/images/fallback-bg.webp') no-repeat center center;
+            background: url('/assets/images/fallback-bg.webp') no-repeat center center;
             background-size: cover;
         }
 
         @media screen and (max-width: 767px) {
         #background-container {
-            background: url('/website/assets/images/fallback-bkg-mobile.webp') no-repeat center center;
+            background: url('/assets/images/fallback-bkg-mobile.webp') no-repeat center center;
             background-size: cover;
         }
     }
@@ -109,9 +109,9 @@
             Untold Garden
         </div>
         <div class="navigation">
-            <a href="/website/projects/">Projects</a>
+            <a href="/projects/">Projects</a>
             <a href="https://news.untold.garden">News</a>
-            <a href="/website/about-us/">About Us</a>
+            <a href="/about-us/">About Us</a>
         </div>
     </div>
 </body>
