--- a/projects/index.html
+++ b/projects/index.html
@@ -5,7 +5,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - Untold Garden</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Untold Garden - Project</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Untold Garden is an art and design studio exploring new technologies. Their works include physical installations, virtual sculptures, interactive performances, artificial natures and experimental social networks.">    
+    <link rel="canonical" href="https://untoldgarden.site/" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Untold Garden" />
+    <meta property="og:description" content="Untold Garden is an art and design studio exploring new technologies. Their works include physical installations, virtual sculptures, interactive performances, artificial natures and experimental social networks." />
+    <meta property="og:url" content="https://untoldgarden.site" />
+    <meta property="og:site_name" content="Untold Garden" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://untoldgarden.site/assets/images/reach.webp" />
+    <meta property="og:image:width" content="1920" />
+    <meta property="og:image:height" content="1080" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Untold Garden" />
+    <meta name="twitter:description" content="Untold Garden is an art and design studio exploring new technologies. Their works include physical installations, virtual sculptures, interactive performances, artificial natures and experimental social networks." />
+    <meta name="twitter:image" content="https://untoldgarden.site/assets/images/reach.webp" />
+
     <link rel="stylesheet" href="/assets/main.css">
     <style>
         .projects-container {
