deploy: 5c56c45fa326d52c9d19b9f8425eac8c7b2d48a4

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -5,29 +5,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Untold Garden - About us</title>
+  <title>About Us | Untold Garden</title>
+  <meta name="author" content="Untold Garden">
+  <meta name="theme-color" content="#000000">
+  <link rel="icon" href="/favicon.ico">
 
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Untold Garden is an art and design studio exploring new technologies. Their works include physical installations, virtual sculptures, interactive performances, artificial natures and experimental social networks.">    
-  <link rel="canonical" href="https://untoldgarden.site/" />
+  <meta name="description" content="Learn about Untold Garden, an art and design studio exploring how technology can catalyse interpersonal relationships and enable alternative human experiences.">    
+  <link rel="canonical" href="https://untoldgarden.site/about-us/" />
+  <meta name="keywords" content="art studio, design studio, technology, team, contact, exhibitions, performances">
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Untold Garden" />
-  <meta property="og:description" content="Untold Garden is an art and design studio exploring new technologies. Their works include physical installations, virtual sculptures, interactive performances, artificial natures and experimental social networks." />
-  <meta property="og:url" content="https://untoldgarden.site" />
+  <meta property="og:title" content="About Us | Untold Garden" />
+  <meta property="og:description" content="Learn about Untold Garden, an art and design studio exploring how technology can catalyse interpersonal relationships and enable alternative human experiences." />
+  <meta property="og:url" content="https://untoldgarden.site/about-us/" />
   <meta property="og:site_name" content="Untold Garden" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://untoldgarden.site/assets/images/reach.webp" />
   <meta property="og:image:width" content="1920" />
   <meta property="og:image:height" content="1080" />
+  <meta property="og:locale" content="en_US">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Untold Garden" />
-  <meta name="twitter:description" content="Untold Garden is an art and design studio exploring new technologies. Their works include physical installations, virtual sculptures, interactive performances, artificial natures and experimental social networks." />
+  <meta name="twitter:title" content="About Us | Untold Garden" />
+  <meta name="twitter:description" content="Learn about Untold Garden, an art and design studio exploring how technology can catalyse interpersonal relationships and enable alternative human experiences." />
   <meta name="twitter:image" content="https://untoldgarden.site/assets/images/reach.webp" />
+  <meta name="twitter:creator" content="@untoldgarden" />
 </head>
 
 <style>
