--- a/projects/index.html
+++ b/projects/index.html
@@ -5,29 +5,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Untold Garden - Project</title>
+    <title>Projects | Untold Garden</title>
+    <meta name="author" content="Untold Garden">
+    <meta name="theme-color" content="#000000">
+    <link rel="icon" href="/favicon.ico">
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Untold Garden is an art and design studio exploring new technologies. Their works include physical installations, virtual sculptures, interactive performances, artificial natures and experimental social networks.">    
-    <link rel="canonical" href="https://untoldgarden.site/" />
+    <meta name="description" content="Browse projects by Untold Garden, an art and design studio exploring new technologies through physical installations, virtual sculptures, interactive performances, artificial natures and experimental social networks.">    
+    <link rel="canonical" href="https://untoldgarden.site/projects/" />
+    <meta name="keywords" content="art projects, design projects, technology, augmented reality, virtual reality, installation art, digital art">
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Untold Garden" />
-    <meta property="og:description" content="Untold Garden is an art and design studio exploring new technologies. Their works include physical installations, virtual sculptures, interactive performances, artificial natures and experimental social networks." />
-    <meta property="og:url" content="https://untoldgarden.site" />
+    <meta property="og:title" content="Projects | Untold Garden" />
+    <meta property="og:description" content="Browse projects by Untold Garden, an art and design studio exploring new technologies through physical installations, virtual sculptures, interactive performances, artificial natures and experimental social networks." />
+    <meta property="og:url" content="https://untoldgarden.site/projects/" />
     <meta property="og:site_name" content="Untold Garden" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://untoldgarden.site/assets/images/reach.webp" />
     <meta property="og:image:width" content="1920" />
     <meta property="og:image:height" content="1080" />
+    <meta property="og:locale" content="en_US">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Untold Garden" />
-    <meta name="twitter:description" content="Untold Garden is an art and design studio exploring new technologies. Their works include physical installations, virtual sculptures, interactive performances, artificial natures and experimental social networks." />
+    <meta name="twitter:title" content="Projects | Untold Garden" />
+    <meta name="twitter:description" content="Browse projects by Untold Garden, an art and design studio exploring new technologies through physical installations, virtual sculptures, interactive performances, artificial natures and experimental social networks." />
     <meta name="twitter:image" content="https://untoldgarden.site/assets/images/reach.webp" />
+    <meta name="twitter:creator" content="@untoldgarden" />
 
     <link rel="stylesheet" href="/assets/main.css">
     <style>
