--- a/projects/index.html
+++ b/projects/index.html
@@ -146,6 +146,10 @@
                     <div class="project-title">Reach</div>
                     <div class="project-description">Bronze, electronics, AR</div>
                 </a>
+                <a href="/streetlight-harvesters" class="project-item" data-image="streetlight-harvesters">
+                    <div class="project-title">Streetlight Harvesters</div>
+                    <div class="project-description">Modified streetlights, audio</div>
+                </a>
                 <a href="/interspatial-echoes" class="project-item" data-image="interspatial-echoes">
                     <div class="project-title">Interspatial Echoes</div>
                     <div class="project-description">Geospatial AR</div>
