deploy: 56476baec9d9cd759ddbfafae36e4938d4faa0df

--- a/apparatus-ludens/index.html
+++ b/apparatus-ludens/index.html
@@ -136,7 +136,7 @@ Do you have a favourite song?</p>
             });
 
         document.getElementById('backButton').addEventListener('click', () => {
-            window.history.back();
+            window.location.href = '/projects/';
         });
     </script>
 </body>
