--- a/reach/index.html
+++ b/reach/index.html
@@ -135,7 +135,7 @@ In Reach, your touch is expanded into a virtual tactile language, a somatic poet
             });
 
         document.getElementById('backButton').addEventListener('click', () => {
-            window.history.back();
+            window.location.href = '/projects/';
         });
     </script>
 </body>
