--- a/about-us/index.html
+++ b/about-us/index.html
@@ -131,13 +131,13 @@
 
   <script>
     // Fetch the SVG icons and include them in the page
-    fetch('../assets/icons.html').then(response => response.text()).then(data => {
+    fetch('/assets/icons.html').then(response => response.text()).then(data => {
       document.getElementById('icons-container').innerHTML = data;
     });
 
     // Event listener for back button
     document.getElementById('backButton').addEventListener('click', () => {
-      window.history.back();
+      window.location.href = '/';
     });
   </script>
 
