--- a/art-sensation-cube/index.html
+++ b/art-sensation-cube/index.html
@@ -97,7 +97,7 @@ for Museet før Samtidskunst, Roskilde</p>
             });
 
         document.getElementById('backButton').addEventListener('click', () => {
-            window.history.back();
+            window.location.href = '/projects/';
         });
     </script>
 </body>
