--- a/garden-of-ghost-flowers/index.html
+++ b/garden-of-ghost-flowers/index.html
@@ -77,7 +77,7 @@
             });
 
         document.getElementById('backButton').addEventListener('click', () => {
-            window.history.back();
+            window.location.href = '/projects/';
         });
     </script>
 </body>
