--- a/interspatial-echoes/index.html
+++ b/interspatial-echoes/index.html
@@ -96,7 +96,7 @@
             });
 
         document.getElementById('backButton').addEventListener('click', () => {
-            window.history.back();
+            window.location.href = '/projects/';
         });
     </script>
 </body>
