--- a/projects/index.html
+++ b/projects/index.html
@@ -242,7 +242,7 @@
             });
 
         document.getElementById('backButton').addEventListener('click', () => {
-            window.history.back();
+            window.location.href = '/';
         });
     </script>
 </body>
