--- a/streetlight-harvesters/index.html
+++ b/streetlight-harvesters/index.html
@@ -118,7 +118,7 @@
             });
 
         document.getElementById('backButton').addEventListener('click', () => {
-            window.history.back();
+            window.location.href = '/projects/';
         });
     </script>
 </body>
