--- a/unknown-cloud/index.html
+++ b/unknown-cloud/index.html
@@ -89,7 +89,7 @@
             });
 
         document.getElementById('backButton').addEventListener('click', () => {
-            window.history.back();
+            window.location.href = '/projects/';
         });
     </script>
 </body>
