--- a/about-us/index.html
+++ b/about-us/index.html
@@ -12,16 +12,16 @@
 
   <!-- SEO Meta Tags -->
   <meta name="description" content="Learn about Untold Garden, an art and design studio exploring how technology can catalyse interpersonal relationships and enable alternative human experiences.">    
-  <link rel="canonical" href="https://untoldgarden.site/about-us/" />
+  <link rel="canonical" href="https://untold.garden/about-us/" />
   <meta name="keywords" content="art studio, design studio, technology, team, contact, exhibitions, performances">
 
   <!-- Open Graph -->
   <meta property="og:title" content="About Us | Untold Garden" />
   <meta property="og:description" content="Learn about Untold Garden, an art and design studio exploring how technology can catalyse interpersonal relationships and enable alternative human experiences." />
-  <meta property="og:url" content="https://untoldgarden.site/about-us/" />
+  <meta property="og:url" content="https://untold.garden/about-us/" />
   <meta property="og:site_name" content="Untold Garden" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://untoldgarden.site/assets/images/reach.webp" />
+  <meta property="og:image" content="https://untold.garden/assets/images/reach.webp" />
   <meta property="og:image:width" content="1920" />
   <meta property="og:image:height" content="1080" />
   <meta property="og:locale" content="en_US">
@@ -30,7 +30,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="About Us | Untold Garden" />
   <meta name="twitter:description" content="Learn about Untold Garden, an art and design studio exploring how technology can catalyse interpersonal relationships and enable alternative human experiences." />
-  <meta name="twitter:image" content="https://untoldgarden.site/assets/images/reach.webp" />
+  <meta name="twitter:image" content="https://untold.garden/assets/images/reach.webp" />
   <meta name="twitter:creator" content="@untoldgarden" />
 </head>
 
