--- a/commissions/index.html
+++ b/commissions/index.html
@@ -12,16 +12,16 @@
 
     <!-- SEO Meta Tags -->
     <meta name="description" content="Browse projects by Untold Garden, an art and design studio exploring new technologies through physical installations, virtual sculptures, interactive performances, artificial natures and experimental social networks.">    
-    <link rel="canonical" href="https://untoldgarden.site/projects/" />
+    <link rel="canonical" href="https://untold.garden/projects/" />
     <meta name="keywords" content="art projects, design projects, technology, augmented reality, virtual reality, installation art, digital art">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Projects | Untold Garden" />
     <meta property="og:description" content="Browse projects by Untold Garden, an art and design studio exploring new technologies through physical installations, virtual sculptures, interactive performances, artificial natures and experimental social networks." />
-    <meta property="og:url" content="https://untoldgarden.site/projects/" />
+    <meta property="og:url" content="https://untold.garden/projects/" />
     <meta property="og:site_name" content="Untold Garden" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://untoldgarden.site/assets/images/reach.webp" />
+    <meta property="og:image" content="https://untold.garden/assets/images/reach.webp" />
     <meta property="og:image:width" content="1920" />
     <meta property="og:image:height" content="1080" />
     <meta property="og:locale" content="en_US">
@@ -30,7 +30,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Projects | Untold Garden" />
     <meta name="twitter:description" content="Browse projects by Untold Garden, an art and design studio exploring new technologies through physical installations, virtual sculptures, interactive performances, artificial natures and experimental social networks." />
-    <meta name="twitter:image" content="https://untoldgarden.site/assets/images/reach.webp" />
+    <meta name="twitter:image" content="https://untold.garden/assets/images/reach.webp" />
     <meta name="twitter:creator" content="@untoldgarden" />
 
     <link rel="stylesheet" href="/assets/main.css">
