--- a/streetlight-harvesters/index.html
+++ b/streetlight-harvesters/index.html
@@ -63,7 +63,9 @@
     </button>
 
     <div class="container">
-        <h1 id="streetlight-harvesters--nattljusskördarna">Streetlight Harvesters / Nattljusskördarna</h1>
+        <p><img src="/assets/images/streetlight-harvesters2.webp" alt="Streetlight Harvesters, by Untold Garden and Lundahl &amp; Seitl 2025" /></p>
+
+<h1 id="streetlight-harvesters--nattljusskördarna">Streetlight Harvesters / Nattljusskördarna</h1>
 
 <blockquote>
   <p>Streetlight Harvesters is a collaboration with artist duo Lundahl &amp; Seitl that reflects on the vast glowing creature that our society births every night, illuminating the shaded side of the globe with artificial light, to then die at dawn’s first light.</p>
@@ -71,7 +73,9 @@
 
 <p>We take artificial light for granted, it is a cornerstone of contemporary life without which it would not be recognisable. Some say that it was Arkwright’s use of tallow candles, which allowed for nightly shifts in his mills, that sparked the Industrial Revolution at scale. But the light that keeps our streets safe affects other species, nocturnal moths can no longer navigate by the moon’s light, and bats reduce their active time believing it is still daytime. The introduction of one system throws another out of balance.</p>
 
-<p><img src="/assets/images/streetlight-harvesters2.webp" alt="Streetlight Harvesters, by Untold Garden and Lundahl &amp; Seitl 2025" /></p>
+<div class="video-wrapper">
+<iframe src="https://player.vimeo.com/video/1065143147?h=ead05d9cb0" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen=""></iframe>
+</div>
 
 <h2 id="conceptual-background">Conceptual Background</h2>
 
