deploy: 16e064fcdc6bbb9f0d3bf5cb6c8a1d0358afebcc

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -11,13 +11,15 @@
   <link rel="icon" href="/favicon.ico">
 
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Learn about Untold Garden, an art and design studio exploring how technology can catalyse interpersonal relationships and enable alternative human experiences.">    
+  <meta name="description"
+    content="Learn about Untold Garden, an art and design studio exploring how technology can catalyse interpersonal relationships and enable alternative human experiences.">
   <link rel="canonical" href="https://untold.garden/about-us/" />
   <meta name="keywords" content="art studio, design studio, technology, team, contact, exhibitions, performances">
 
   <!-- Open Graph -->
   <meta property="og:title" content="About Us | Untold Garden" />
-  <meta property="og:description" content="Learn about Untold Garden, an art and design studio exploring how technology can catalyse interpersonal relationships and enable alternative human experiences." />
+  <meta property="og:description"
+    content="Learn about Untold Garden, an art and design studio exploring how technology can catalyse interpersonal relationships and enable alternative human experiences." />
   <meta property="og:url" content="https://untold.garden/about-us/" />
   <meta property="og:site_name" content="Untold Garden" />
   <meta property="og:type" content="website" />
@@ -29,7 +31,8 @@
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="About Us | Untold Garden" />
-  <meta name="twitter:description" content="Learn about Untold Garden, an art and design studio exploring how technology can catalyse interpersonal relationships and enable alternative human experiences." />
+  <meta name="twitter:description"
+    content="Learn about Untold Garden, an art and design studio exploring how technology can catalyse interpersonal relationships and enable alternative human experiences." />
   <meta name="twitter:image" content="https://untold.garden/assets/images/reach.webp" />
   <meta name="twitter:creator" content="@untoldgarden" />
 </head>
@@ -44,7 +47,7 @@
       display: flex;
       flex-direction: column;
     }
-    
+
     .row .column {
       width: 100%;
     }
@@ -74,7 +77,7 @@
         worlds, and the near-endless esthetic capabilities of brain-replicating machines, rendering any solidity of
         aesthetics useless. Untold, as well as in not narrated or told by us, as our projects speak through those who
         experience them, each artwork unique to everyone who partakes in it.</div>
-        <br>
+      <br>
       <div class="column"><b><i>Garden</i></b>, as in the continuously evolving dance of mutual dependency between
         humans and natures - in the plural. Natures that are today both physical and virtual, through the numerous
         entities facilitating, mediating and obfuscating the human existence online, new digital ecosystems teeming with
@@ -100,33 +103,40 @@
       </div>
       <br>
       <br>
+      <h2>Current and upcoming Exhibitions & Performances:</h2>
+      <ul>
+        <li><i><b>Slakthusområdet</b></i>, March - April 2025, Stockholm (Streetlight Harvesters)</li>
+        <li><i><b>Screen City Biennial</b></i>, March 2024, Stavanger (Garden of Ghost Flowers)</li>
+      </ul>
+      <br>
       <h2>Past Exhibitions & Performances:</h2>
-        <ul>
-          <li><i><b>Nobel Prize Museum</b></i>, October 2023, Stockholm (Garden of Ghost Flowers)</li>
-          <li><i><b>BFI London Film Festival</b></i>, October 2023, London (Fleeting Figures & Interspatial Echoes)</li>
-          <li><i><b>Annka Kultys Gallery</b></i>, October 2023, London (Interspatial Echoes)</li>
-          <li><i><b>Vävda rum</b></i> (Woven Places), May-September 2023, Across Sweden (Vävda rum & Interspatial
-            Echoes)</li>
-          <li><i><b>BFI London Film Festival</b></i>, October 2022, London (Apparatus Ludens)</li>
-          <li><i><b>STRP</b></i>, April 2022, Eindhoven (Garden of Ghost Flowers)</li>
-          <li><i><b>Form/Design Center</b></i>, October 2021, Malmö (Apparatus Ludens - Prototype)</li>
-          <li><i><b>Overkill Festival</b></i>, Nov - Dec 2021, Enschede (Apparatus Ludens - Prototype)</li>
-          <li><i><b>KØS</b></i>, October 2021, Køge (Unknown Cloud)</li>
-          <li><i><b>Celsius Projects</b></i>, June 2021, Malmö (Unknown Cloud)</li>
-          <li><i><b>Kiblix</b></i>, December 2021 (Skiljelinjer)</li>
-          <li><i><b>Stockholm Design Week</b></i>, February 2021 (Skiljelinjer)</li>
-        </ul>
-        <br>
-        <br>
-        <h2>Contact</h2>
-          <u><a href="mailto:studio@untold.garden">studio@untold.garden</a></u><br>
-          <u><a href="https://www.instagram.com/untoldgarden/" target="_blank">instagram</a></u>
-          <h3>UK Office</h3>
-          <p>Hackney Depot<br>5 Sheep Ln<br>London<br>E8 4QS</p>
-          <h3>Sweden Office</h3>
-          <p>Spånehusvägen 83<br>214 39<br>Malmö</p>
-          <br>
-          <br>
+      <ul>
+        <li><i><b>British Art Fair PIVOTAL: Digitalism</b></i>, September 2024, London (Reach)</li>
+        <li><i><b>CPH:Dox</b></i>, March 2024, Copenhagen (Garden of Ghost Flowers)</li>
+        <li><i><b>Nobel Prize Museum</b></i>, October 2023, Stockholm (Garden of Ghost Flowers)</li>
+        <li><i><b>BFI London Film Festival</b></i>, October 2023, London (Fleeting Figures & Interspatial Echoes)</li>
+        <li><i><b>Annka Kultys Gallery</b></i>, October 2023, London (Interspatial Echoes)</li>
+        <li><i><b>Vävda rum</b></i> (Woven Places), May-September 2023, Across Sweden (Interspatial Echoes)</li>
+        <li><i><b>BFI London Film Festival</b></i>, October 2022, London (Apparatus Ludens)</li>
+        <li><i><b>STRP Festival</b></i>, April 2022, Eindhoven (Garden of Ghost Flowers)</li>
+        <li><i><b>Form/Design Center</b></i>, October 2021, Malmö (Apparatus Ludens - Prototype)</li>
+        <li><i><b>Overkill Festival</b></i>, Nov - Dec 2021, Enschede (Apparatus Ludens - Prototype)</li>
+        <li><i><b>KØS</b></i>, October 2021, Køge (Unknown Cloud)</li>
+        <li><i><b>Celsius Projects</b></i>, June 2021, Malmö (Unknown Cloud)</li>
+        <li><i><b>Kiblix</b></i>, December 2021 (Skiljelinjer)</li>
+        <li><i><b>Stockholm Design Week</b></i>, February 2021 (Skiljelinjer)</li>
+      </ul>
+      <br>
+      <br>
+      <h2>Contact</h2>
+      <u><a href="mailto:studio@untold.garden">studio@untold.garden</a></u><br>
+      <u><a href="https://www.instagram.com/untoldgarden/" target="_blank">instagram</a></u>
+      <h3>UK Office</h3>
+      <p>Hackney Depot<br>5 Sheep Ln<br>London<br>E8 4QS</p>
+      <h3>Sweden Office</h3>
+      <p>Spånehusvägen 83<br>214 39<br>Malmö</p>
+      <br>
+      <br>
   </div>
 
   <script>
