deploy: 39ea6139b8428ecade3d4925b8cf6b8d0555dcd1

--- a/reach/index.html
+++ b/reach/index.html
@@ -120,8 +120,8 @@ In Reach, your touch is expanded into a virtual tactile language, a somatic poet
 
 <p><img src="/assets/images/reach-jenny.webp" alt="Reach, by Untold Garden 2024, at British Art Fair" />
 <img src="/assets/images/Reach-BAF-senior-lady.webp" alt="Reach, by Untold Garden 2024, at British Art Fair" />
-<img src="/assets/images/Reach-BAF-hug.webp" alt="Reach, by Untold Garden 2024, at British Art Fair" /></p>
-
+<img src="/assets/images/Reach-BAF-hug.webp" alt="Reach, by Untold Garden 2024, at British Art Fair" />
+<img src="/assets/images/Reach-Inside.webp" alt="Reach, by Untold Garden 2024, at British Art Fair" /></p>
 
         <div class="copyright">© Untold Garden 2025</div>
     </div>
